--- a/DrugManagementWebApp/Views/Home/Index.cshtml
+++ b/DrugManagementWebApp/Views/Home/Index.cshtml
@@ -40,9 +40,9 @@
                             <div>
                                 <a class="w-100 btn btn-lg btn-primary" asp-area="" asp-controller="AntiAllergicDrugSymptom" asp-action="Index">Anti Allergic Drug Symptom</a>
                             </div><br />
-                            <div>
+                           @* <div>
                                 <a class="w-100 btn btn-lg btn-primary" asp-area="" asp-controller="DrugTrailDetails" asp-action="Index">Drug Trail Details</a>
-                            </div>
+                            </div>*@
                             
                         }
         </div>
